--- a/src/views/SlimApp.css
+++ b/src/views/SlimApp.css
@@ -9,19 +9,9 @@
     padding: 0 0;
 }
 
-.SlimApp-content .dashboard-panel {
-    margin-top: 16px;
-    text-align: left;
+.SlimApp-content .row{
+    margin: 0!important;
 }
-
-.SlimApp-content .trio {
-    min-height: 810px !important;
-}
-
-.SlimApp-content .panel-content {
-    padding: 30px;
-}
-
 .SlimApp-content .divider {
     margin: 20px 0px !important;
     clear: both;
